# bitboard

./: Cargo.toml  README.md
examples/: initial.rs
src/: consts.rs  lib.rs  position.rs  prelude.rs  squares.rs
src/position/: consts.rs
