[package]
name = "bitboard64"
description = "A 64-bit bitboard useful for chess programming"
version = "0.2.0"
authors = ["Isak Jägberg <ijagberg@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["chess"]
categories = ["data-structures"]
repository = "https://github.com/ijagberg/bitboard"
homepage = "https://github.com/ijagberg/bitboard"

[dependencies]
chesspos = { version = "0.2.0" }
